<resources>
    <string name="app_name">Warehouse CortinApp</string>
    <string name="text_codigo">Sales Code</string>
    <string name="text_fecha">Date of sale</string>
    <string name="text_abono">Amount paid</string>
    <string name="text_saldo">Current balance</string>
    <string name="text_registro">SUBSCRIBE REGISTRATION</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_logout">Logout</string>
    <string name="prueba_git">Logout</string>

    <string name="text_identificacion">Identification number</string>
    <string name="text_nombre">Name</string>
    <string name="text_apellidos">Surnames</string>
    <string name="text_correo">Email</string>
    <string name="text_registroven">Sellers Registration</string>
    <string name="tv1">Primer Activity</string>
    <string name="BotonSiguiente">Siguiente</string>
    <string name="BotonVolver">Volver</string>
    <string name="botonLogin">Login</string>
    <string name="BotonVolveralinicio">Volver Al Inicio</string>
    <string name="text_error">Error</string>
    <string name="text_error_message">Invalid user name or password</string>

    <string name="text_registroventa">Sales Record</string>
    <string name="text_ancho">Curtain Width</string>
    <string name="text_alto">High Curtain</string>
    <string name="text_area">Curtain Area</string>
    <string name="text_precio">Curtain Price</string>
    <string name="text_cuotasemanal">Weekly Fee</string>
    <string name="text_saldocliente">Balance</string>
    <string name="text_cantidadcuotas">Amount Quotas</string>
    <string name="text_cuotaactual">Current Quota</string>
    <string name="text_documentocliente">Client Document</string>
    <string name="text_documentovendedor">Selling Document</string>
    <string name="text_id">Id Item</string>
    <string name="text_fechaventa">Sale Date</string>
    <string name="text_codigorticulo">Item code</string>
    <string name="text_colorarticulo">Item Color</string>
    <string name="text_valormetrocuadrado">Value per square meter</string>
    <string name="text_registroarticulo">Registro de Articulos</string>
    <string name="hint">email@domain.com</string>
    <string name="login">LOGIN</string>


</resources>