<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VentasActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:background="#757575"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300px"
            android:layout_height="300px"
            android:layout_weight="1"
            android:outlineAmbientShadowColor="@color/black"
            app:srcCompat="@drawable/cortinapp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#757575"
            android:backgroundTint="#757575"
            android:gravity="center"
            android:textColor="@color/brown_400"
            android:text="@string/text_registroventa"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="25sp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#757575"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_fechaventa"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtcodarticulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_ancho"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_alto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtvalormc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_area"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_precio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_cuotasemanal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtcuotasemanl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_saldocliente"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_cantidadcuotas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtcantidadcuota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_cuotaactual"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtcuotaactual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_documentocliente"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtdocumentocli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_documentovendedor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtdocumentoven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#BCAAA4"
                    android:backgroundTint="#BCAAA4"
                    android:text="@string/text_id"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtidventa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#bdbdbd"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/btn_cuatro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BotonSiguiente"
                    android:textSize="24sp"/>


            </LinearLayout>


        </ScrollView>






    </LinearLayout>
</LinearLayout>

